--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="author" content="hms5232">
-	<title>問卷入口</title>
+	<meta name="author" content="ning1116">
+	<title>隨機問卷</title>
 </head>
 <body>
 	<script src="./url.js"></script>
