--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>隨機問卷</title>
 </head>
 <body>
-	<script src="./url.js"></script>
+	<script src="./url."></script>
 	<script src="./index.js" defer></script>
 </body>
 </html>
